update email address in contact.html

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
                 <strong>Mobile</strong>: 0123456789
             </li>
             <li>
-                <strong> Email</strong>: jana.arnab023@gmail.com
+                <strong> Email</strong>: onlinecourses2k19@gmail.com
             </li>
         </ul>
     </p>
